Fix StrCat in LICM https://bugs.webkit.org/show_bug.cgi?id=256223 rdar://108693746

Reviewed by NOBODY (OOPS!).

We might have crashes in operationStrCat3(2) due to LICM might hoist StrCat node but
not hoist its prerequisite Check nodes. This patch fixes this issue by simply
add new checks for StrCat and hoist them in LICM phase.

* Source/JavaScriptCore/dfg/DFGLICMPhase.cpp:
(JSC::DFG::LICMPhase::attemptHoist):